<resources>
    <string name="app_name">ParkDublin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Info</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="live_feed_popup">The live feed is updated every \n 5 mins</string>
    <string name="map_popup">User The side Buttons to Navigate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="parkme_dublin">ParkMe Dublin</string>
    <string name="we_collect">We collect:</string>
    <string name="our_policies">Our policies!</string>
    <string name="the_owner">theowner</string>
    <string name="_1_hour">1 hour</string>
    <string name="_3_50">3.50</string>
    <string name="car_number_plate">Car Number Plate</string>
    <string name="pay_now">Pay Now</string>
    <string name="email">Email</string>

    <string name="show_password">Show Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log In</string>

    <string name="login">Login</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="register">Register</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="user_email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">username</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="local_car_parking">Local Car Parks</string>
    <string name="book_a_space">Book a Space</string>
    <string name="map_find_location">Map/Find Location</string>
    <string name="nearby_car_parkings">Nearby Car Parks</string>
    <string name="space_available">Space Available</string>
    <string name="live_feed">Live Feed</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="car_parking_info">Car Park Info.</string>
    <string name="feed_update">Feed Update</string>
    <string name="navigation_tools">Navigation Tools</string>
    <string name="visit_website">Visit Website</string>
    <string name="book_with_us">Book with us</string>
    <string name="sharetofriends">ShareToFriends</string>
    <string name="up_to_1_hour_visit">Up to 1 hour visit</string>
    <string name="_24_hour_parking">24 hour parking</string>
    <string name="book_now">Book Now</string>
    <string name="eur_in_amount">EUR in amount</string>
    <string name="name_of_the_park">name of the park</string>
    <string name="name_got_from_the_parser">name got from the parser</string>
    <string name="number_of_spaces">number of spaces</string>
    <string name="arnotts">arnotts</string>
    <string name="user_password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="collecting_license_plate">Your vehicle license plate number will be collected</string>
    <string name="collecting_user_card_information">Our vendor paypal collects your credit card information</string>
    <string name="if_you_reserve_parking">IF YOU RESERVE A PARKING</string>
    <string name="gps_location">GPS Location</string>
    <string name="collect_password">Password</string>
    <string name="collect_username">Username</string>
    <string name="collect_address">Address</string>
    <string name="collect_email">Email</string>
    <string name="collect_name">Name</string>
    <string name="what_we_collect">To get the best of our app we collect</string>
    <string name="persona">Persona:</string>
    <string name="developer_name">Abdoulaye Kaloga</string>
    <string name="developer_degree">Bachelor in Business and Information Systems</string>
    <string name="search_car_park">Search car park...</string>
    <string name="profile">Profile</string>
    <string name="update_information">Update Information</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_mobile_number">0123456789</string>


</resources>
